<resources>
    <string name="API_KEY">d6c049e8ed30d76f09132f2167e8745e</string>
    <string name="app_name">WeatherForecast</string>
    <string name="condition_image">Condition Image</string>
    <string name="deleteItemString">x</string>
    <string name="longFillingString">Details details …</string>
    <string name="swipe_left">swipe left</string>
    <string name="swipe_right">swipe right</string>
    <string name="details">Details</string>
    <string name="remove">Remove</string>
    <string name="tablet">false</string>
    <string name="getLocation">Choose location</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_degrees">Wind degrees</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="min">Min:</string>
    <string name="max">| Max:</string>
    <string name="wind_degree_icon">Wind degree icon</string>
    <string name="wind_speed_icon">Wind speed icon</string>
    <string name="air_pressure">Air pressure</string>
    <string name="humidity_icon">Humidity icon</string>
    <string name="calculation_time">Calculation time:</string>
    <string name="sea_level">- sea level:</string>
    <string name="ground_level">- ground level:</string>
    <string name="pressureDetails">Pressure:</string>
    <string name="wind_degrees_details">Wind degrees:</string>
    <string name="wind_speed_details">Wind speed:</string>
    <string name="cloudiness">Cloudiness:</string>
    <string name="humidity_details">Humidity:</string>
    <string name="description">Description:</string>
    <string name="max_temp">Max Temp</string>
    <string name="min_temp">Min Temp</string>
    <string name="details_temperature_x" formatted="false">%d°C</string>
    <string name="details_humidity_x" formatted="false">%d%%</string>
    <string name="details_clouds_x" formatted="false">%d%%</string>
    <string name="details_wind_speed_x" formatted="false">%.0fm/s</string>
    <string name="details_pressure_x" formattted="false">%.0fhPa</string>
    <string name="main_coordinates_info_x">Latitude: %1$.2f Longitude: %2$.2f</string>
    <string name="main_selected_location_x">Location selected: %s</string>
    <string name="main_weather_updated">Weather updated!</string>
    <string name="main_location_selection_failed">Location selection failed!</string>
    <string name="main_Notification_title_x">%1$s %2$d°C</string>
    <string name="details_today_time_x" formatted="false">Today %s</string>
    <string name="details_noon_time_x" formatted="false">%s Noon</string>
</resources>
