<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/awd_ll_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.tapptitude.weatherforecast.custom_views.GraphView
        android:id="@+id/awd_gv_graph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/awd_iv_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/w01d" />

        <RelativeLayout
            android:id="@+id/awd_rl_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/awd_tv_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:textAllCaps="true"
                tools:text="Monday"/>

            <TextView
                android:id="@+id/awd_tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/awd_tv_day"
                android:textSize="15sp"
                tools:text="22:00"/>

            <TextView
                android:id="@+id/awd_tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/awd_tv_time"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                tools:text="6°C" />

            <LinearLayout
                android:id="@+id/awd_ll_minTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/awd_tv_temp">

                <TextView
                    android:id="@+id/awd_tv_temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min_temp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/awd_tv_temp_min_value"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    tools:text="6°C" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/awd_ll_maxTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/awd_ll_minTemp">

                <TextView
                    android:id="@+id/awd_tv_temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_temp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/awd_tv_temp_max_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    tools:text="30°C" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <TextView
            android:id="@+id/awd_tv_description"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"/>

        <TextView
            android:id="@+id/awd_tv_description_value"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_description"
            android:textAllCaps="true"
            android:textStyle="bold"
            tools:text="detailed description"/>

        <TextView
            android:id="@+id/awd_tv_humidity"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/awd_tv_description"
            android:text="@string/humidity_details"/>

        <TextView
            android:id="@+id/awd_tv_humidity_value"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_humidity"
            android:layout_below="@+id/awd_tv_description"
            android:textStyle="bold"
            tools:text="80%"/>

        <TextView
            android:id="@+id/awd_tv_cloudiness"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/awd_tv_humidity"
            android:text="@string/cloudiness"/>

        <TextView
            android:id="@+id/awd_tv_cloudiness_value"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_cloudiness"
            android:layout_below="@+id/awd_tv_humidity"
            android:textStyle="bold"
            tools:text="60%"/>

        <TextView
            android:id="@+id/awd_tv_wind_speed"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/awd_tv_cloudiness"
            android:text="@string/wind_speed_details"/>

        <TextView
            android:id="@+id/awd_tv_wind_speed_value"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_cloudiness"
            android:layout_below="@+id/awd_tv_cloudiness"
            android:textStyle="bold"
            tools:text="5m/s"/>

        <TextView
            android:id="@+id/awd_tv_wind_deg"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_wind_speed_value"
            android:layout_below="@+id/awd_tv_cloudiness"
            android:text="@string/wind_degrees_details"/>

        <TextView
            android:id="@+id/awd_tv_wind_deg_value"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_wind_deg"
            android:layout_below="@+id/awd_tv_cloudiness"
            android:textStyle="bold"
            tools:text="230.02"/>

        <TextView
            android:id="@+id/awd_tv_pressure"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/awd_tv_wind_speed"
            android:text="@string/pressureDetails"/>

        <TextView
            android:id="@+id/awd_tv_pressure_value"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_pressure"
            android:layout_below="@+id/awd_tv_wind_speed"
            android:textStyle="bold"
            tools:text="80hPa"/>

        <TextView
            android:id="@+id/awd_tv_ground_pressure"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_pressure_value"
            android:layout_below="@+id/awd_tv_wind_speed"
            android:text="@string/ground_level"/>

        <TextView
            android:id="@+id/awd_tv_ground_pressure_value"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_ground_pressure"
            android:layout_below="@+id/awd_tv_wind_speed"
            android:textStyle="bold"
            tools:text="81hPa"/>

        <TextView
            android:id="@+id/awd_tv_sea_pressure"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_ground_pressure_value"
            android:layout_below="@+id/awd_tv_wind_speed"
            android:text="@string/sea_level"/>

        <TextView
            android:id="@+id/awd_tv_sea_pressure_value"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_sea_pressure"
            android:layout_below="@+id/awd_tv_wind_speed"
            android:textStyle="bold"
            tools:text="81hPa"/>

        <TextView
            android:id="@+id/awd_tv_time_calc"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/awd_tv_pressure"
            android:text="@string/calculation_time"/>

        <TextView
            android:id="@+id/awd_tv_time_calc_value"
            android:layout_marginStart="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/awd_tv_time_calc"
            android:layout_below="@+id/awd_tv_pressure"
            android:textStyle="bold"
            tools:text="01 January, 2016 10:00:00"/>

    </RelativeLayout>

</LinearLayout>